--- a/Hofstadter/Hofstadter.Shared/App.xaml
+++ b/Hofstadter/Hofstadter.Shared/App.xaml
@@ -3,5 +3,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Hofstadter">
+    
+    <!--Application Resources-->
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                
+                <!--Application DataTemplate imports-->
+                <ResourceDictionary Source="Views/DataTemplates/HistoryViews.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
